feat: Updated to 1.21.1 - GUI fixes